Bug 446858 - Date of creation doesn't update if folder opened in 2 tabs
Summary: Date of creation doesn't update if folder opened in 2 tabs
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: details mode (other bugs)
Version First Reported In: 21.08.3
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-12 00:02 UTC by MrNekit
Modified: 2024-04-05 18:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description MrNekit 2021-12-12 00:02:05 UTC
Date of creation doesn't update if folder opened in 2 tabs
***
STEPS TO REPRODUCE
1. Open one folder in two tabs. 
2. Save some file in this folder from any app
3. Check date of creation of new file. After update (f5) nothing change. 
4. Close one tab
5. Update again (f5) and date of creation will be updated

Dolphin 21.08.3
Operating System: Manjaro Linux
KDE Plasma Version: 5.23.4
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.2
Kernel Version: 5.15.7-lqx1-1-lqx (64-bit)
Graphics Platform: X11
Comment 1 Méven Car 2024-04-05 18:49:35 UTC
Git commit db740854f3644fe47e8aec24dadf467aa5a1d7a2 by Méven Car.
Committed on 05/04/2024 at 18:49.
Pushed by meven into branch 'master'.

kfileitem: Linux, use statx to refresh files

The statx logic is shared with kioworkers/file to minimize code
duplication.

M  +2    -0    src/core/CMakeLists.txt
M  +24   -13   src/core/kfileitem.cpp
M  +2    -0    src/kioworkers/file/CMakeLists.txt
M  +0    -3    src/kioworkers/file/config-kioworker-file.h.in
A  +3    -0    src/kioworkers/file/config-stat-unix.h.in
M  +2    -129  src/kioworkers/file/file_unix.cpp
A  +149  -0    src/kioworkers/file/stat_unix.h     [License: LGPL(v2.0+)]

https://invent.kde.org/frameworks/kio/-/commit/db740854f3644fe47e8aec24dadf467aa5a1d7a2