kfileitem: Linux, use statx to refresh files

The statx logic is shared with kioworkers/file to minimize code
duplication.

BUG: 446858